--- a/public/css/sass/shared.sass
+++ b/public/css/sass/shared.sass
@@ -66,7 +66,7 @@ nav
 .logo
   width: 225px
   height: 67px
-  background: url('/images/site/logo.png') no-repeat 0 0
+  @include hr-image('../images/site/logo.png', '../images/site/logo@2x.png')
   background-size: 100%
   position: absolute
   left: 50%
