--- a/craft/templates/partials/nav.html
+++ b/craft/templates/partials/nav.html
@@ -16,9 +16,9 @@
     {% if display_menu %}
     <ul class="navigation">
       <li><a href="{{ url('about') }}" {% if craft.request.getSegment(1) == 'about' %}class="active"{% endif %}>{{"About" | translate}}</a></li>
-      <li><a href="{{ url('vineyard') }}" {% if craft.request.getSegment(1) == 'vineyard' %}class="active"{% endif %}>{{"Vineyard & Winery" | translate}}</a></li>
-      <li><a href="{{ url('products') }}" {% if craft.request.getSegment(1) == 'products' %}class="active"{% endif %}>{{"Products" | translate}}</a></li>
-      <li><a href="{{ url('awards') }}" {% if craft.request.getSegment(1) == 'awards' %}class="active"{% endif %}>{{"Press & Awards" | translate}}</a></li>
+      <li><a href="{{ url('vineyard') }}" {% if craft.request.getSegment(1) == 'vineyard' %}class="active"{% endif %}>{{"Winery" | translate}}</a></li>
+      <li><a href="{{ url('products') }}" {% if craft.request.getSegment(1) == 'products' %}class="active"{% endif %}>{{"Wines" | translate}}</a></li>
+      <li><a href="{{ url('awards') }}" {% if craft.request.getSegment(1) == 'awards' %}class="active"{% endif %}>{{"News" | translate}}</a></li>
       <li><a href="{{ url('gallery') }}" {% if craft.request.getSegment(1) == 'gallery' %}class="active"{% endif %}>{{"Gallery" | translate}}</a></li>
       <li><a href="{{ url('contact') }}" {% if craft.request.getSegment(1) == 'contact' %}class="active"{% endif %}>{{"Contact" | translate}}</a></li>
       <li class="localization-tab">
