Requested updates to info display in checkout

--- a/craft/templates/commerce/_includes/cart_item.html
+++ b/craft/templates/commerce/_includes/cart_item.html
@@ -33,6 +33,6 @@
       Discount: {{ item.discount|currency(currencyCode) }}<br>
     {% endif %}
 
-    Total: {{ item.total|currency(currencyCode) }}<br>
+    Subtotal: {{ item.subtotal|currency(currencyCode) }}<br>
   </td>
 </tr>
