--- a/craft/templates/commerce/checkout/shipping.html
+++ b/craft/templates/commerce/checkout/shipping.html
@@ -39,7 +39,7 @@
         {% endfor %}
         <span class="flash">{{ cart.getErrors('shippingMethod')|join }}</span>
 
-        <p><input type="submit" class="button button-primary" value="Select Shipping Method"/></p>
+        <p><input type="submit" class="button button-primary" value="Confirm Shipping Method"/></p>
 
       </form>
       {% endif %}
