--- a/craft/templates/commerce/checkout/addresses.html
+++ b/craft/templates/commerce/checkout/addresses.html
@@ -16,7 +16,7 @@
       {{ getCsrfInput() }}
 
       {% if not cart.email %}
-      <label for="">Email</label>
+      <label for="">{{ "Email" | t }}</label>
       <input class="u-full-width" type="text" value="{{ cart.email }}" name="email"
       placeholder="email@site.com"/>
 
@@ -31,8 +31,7 @@
 
     <input type="hidden" name="sameAddress" value="0">
 
-    <label for="sameAddress"><input id="sameAddress" name="sameAddress" type="checkbox" checked="checked"/><span class="label-body">Use same address for
-      billing</span></label>
+    <label for="sameAddress"><input id="sameAddress" name="sameAddress" type="checkbox" checked="checked"/><span class="label-body">{{ "Use same address for billing" | t }}</span></label>
 
       <br>
 
@@ -42,7 +41,7 @@
       name: 'billingAddress'
     } %}
 
-    <input type="submit" class="button button-primary" value="Confirm addresses">
+    <input type="submit" class="button button-primary" value="{{ "Confirm addresses" | t }}">
 
   </form>
 
