--- a/craft/templates/commerce/customer/addresses/index.html
+++ b/craft/templates/commerce/customer/addresses/index.html
@@ -4,10 +4,10 @@
 
   <div class="row">
     <div class="one-half column">
-      <h1>Manage Addresses</h1>
+      <h1>{{ "Manage Addresses" | t }}</h1>
     </div>
     <div class="one-half column">
-      <a class="button button-primary right" href="/commerce/customer/addresses/edit">Add New Address</a>
+      <a class="button button-primary right" href="{{ url('commerce/customer/addresses/edit') }}">{{ "Add New Address" | t }}</a>
     </div>
   </div>
 
@@ -18,11 +18,11 @@
     {% endif %}
       <div class="address-card one-third column">
         {% include 'commerce/_includes/addresses/address' with {'address': address} %}
-        <a class="button button-primary" href="/commerce/customer/addresses/edit?addressId={{ address.id }}">Edit</a>
+        <a class="button button-primary" href="{{ url('commerce/customer/addresses/edit?addressId={ address.id }') }}">{{ "Edit" | t }}</a>
         <form method="POST">
           <input type="hidden" name="action" value="commerce/customerAddresses/delete">
           <input type="hidden" name="id" value="{{ address.id }}"/>
-          <input type="submit" value="delete"/>
+          <input type="submit" value="{{ "delete" | t }}"/>
         </form>
       </div>
     {% if loop.index is divisible by(3) %}
