--- a/craft/templates/commerce/customer/index.html
+++ b/craft/templates/commerce/customer/index.html
@@ -5,7 +5,7 @@
     <div class="twelve columns">
       {% if currentUser %}
 
-        <h1>My Orders</h1>
+        <h1>{{ "My Orders" | t }}</h1>
 
         {% set orders = craft.commerce.orders.customer(craft.commerce.customer).find() %}
 
@@ -24,14 +24,14 @@
             <tr>
               <td><a href="{{ url('commerce/customer/order', { number: order.number }) }}">Order #{{ order.id }}</a></td>
               <td>{{ order.dateOrdered }}</td>
-              <td>{{ order.totalQty }} items</td>
+              <td>{{ order.totalQty }} {{ "items" | t }}</td>
               <td>{{ order.totalPrice|currency(order.currency) }}</td>
             </tr>
             {% endfor %}
           </tbody>
         </table>
         {% else %}
-          <p>No orders found</p>
+          <p>{{ "No orders found" | t }}</p>
         {% endif %}
 
       {% endif %}
