--- a/craft/templates/forgot.html
+++ b/craft/templates/forgot.html
@@ -19,7 +19,7 @@
       </ul>
     {% endif %}
 
-    <input type="submit" value="Submit">
+    <input type="submit" value="{{ "Submit" | t }}">
   </form>
 
 {% endblock %}
