--- a/craft/templates/commerce/_includes/_postRedirect.html
+++ b/craft/templates/commerce/_includes/_postRedirect.html
@@ -2,14 +2,14 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<title>Redirecting...</title>
+	<title>{{ "Redirecting" | t }}...</title>
 </head>
 {# This is an example of a gateway post redirect template. You can use this by configuring the `gatewayPostRedirectTemplate` config option. #}
 {# The page's form should submit itself to the `actionUrl` and output all hidden inputs with `inputs` #}
 {# We suggest inlining all css and keeping the page size to a minimum #}
 <body onload="document.forms[0].submit();">
 <form action="{{ actionUrl|raw }}" method="post">
-	<p style="color:green">Redirecting to payment page...</p>
+	<p style="color:green">{{ "Redirecting to payment page" | t }}...</p>
 	<p>
 		{{ inputs|raw }}
 		<input type="submit" value="Continue" />
