--- a/craft/templates/commerce/_includes/meter.html
+++ b/craft/templates/commerce/_includes/meter.html
@@ -39,7 +39,7 @@
             {% set class = "done" %}
           {% endif %}
 
-          <li class="{{ class }}"><a href="{{ url( step.url ) }}">{{ step.label }}</a></li>
+          <li class="{{ class }}"><a href="{{ url( step.url ) }}">{{ step.label | t}}</a></li>
 
         {% endfor %}
       </ul>
