--- a/craft/templates/commerce/checkout/index.html
+++ b/craft/templates/commerce/checkout/index.html
@@ -12,7 +12,7 @@
 
   <div class="six columns">
 
-    <h3>Guest Checkout</h3>
+    <h3>{{ "Guest Checkout" | t }}</h3>
 
     {#
     Setting the guest email address on the guest customer and order.
@@ -23,13 +23,13 @@
       <input type="hidden" name="action" value="commerce/cart/updateCart">
       <input type="hidden" name="redirect" value="commerce/checkout/addresses">
       {{ getCsrfInput() }}
-      <label for="">Email</label>
+      <label for="">{{ "Email" | t }}</label>
       <input class="u-full-width" type="text" value="{{ cart.email }}" name="email"
       placeholder="email@site.com"/>
 
       <span class="flash">{{ cart.getErrors('email')|join }}</span><br>
 
-      <input type="submit" value="Continue as Guest" class="button button-primary"/>
+      <input type="submit" value="{{ "Continue as Guest" | t }}" class="button button-primary"/>
 
     </form>
   </div>
